[project]
name = "dagshub-import-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KBolashev", email = "kirill@dagshub.com" }
]
requires-python = ">=3.11.7"
dependencies = [
    "click>=8.2.1",
    "dagshub",
    "mlflow==2.22.0",
    "mlflow-export-import",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.scripts]
dagshub-import-export = "dagshub_import_export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
dagshub = { path = "../client", editable = true }
mlflow-export-import = { git = "https://github.com/mlflow/mlflow-export-import" }

[tool.ruff]
line-length = 120
