[project]
name = "dagshub-import-export"
version = "0.1.0"
description = "Tool to copy DagsHub repositories"
readme = "README.md"
license = "MIT"
authors = [
    { name = "KBolashev", email = "kirill@dagshub.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=7.0",
    "dagshub",
    "label-studio-sdk~=1.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
    # dependencies of mlflow-export-import
    "tabulate>=0.9.0",
    "wheel>=0.45.1",
    "mlflow-skinny[databricks]==2.22.0",
    "databricks-cli>=0.18.0",
    "pyarrow>=20.0.0",
]

[project.scripts]
dagshub-import-export = "dagshub_import_export.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
]
